src/objects/Doc_RecordType__c.object
<CustomObject>
    <fields>
        <fullName>Doc_SObject__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Doc SObject</label>
        <referenceTo>Doc_SObject__c</referenceTo>
        <relationshipLabel>Doc Record Types</relationshipLabel>
        <relationshipName>Doc_Record_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <description>System generated</description>
        <externalId>true</externalId>
        <inlineHelpText>System generated</inlineHelpText>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMaster__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MetadataStatus</valueSetName>
        </valueSet>
    </fields>
    <label>Doc Record Type</label>
    <nameField>
        <label>Doc Record Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Record Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>